Bug 131071 - FILEOPEN DOCX Default font size of table not applied
Summary: FILEOPEN DOCX Default font size of table not applied
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.1 all versions
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:7.0.0
Keywords:
Depends on:
Blocks: DOCX-Tables
  Show dependency treegraph
 
Reported: 2020-03-02 12:36 UTC by NISZ LibreOffice Team
Modified: 2020-03-17 15:54 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of the original document side by side in Word and Writer (127.07 KB, image/png)
2020-03-02 12:36 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2020-03-02 12:36:25 UTC
Description:
In sw/qa/extras/ooxmlexport/data/tdf118947_tableStyle.docx the second cell of the table should show a 8pt font size, but currently it shows 12 pt.

Steps to Reproduce:
Open unit test file sw/qa/extras/ooxmlexport/data/tdf118947_tableStyle.docx

Actual Results:
The second cell has 8pt font size in Word, but 12pt in Writer.

Expected Results:
8pt font size.



Reproducible: Always


User Profile Reset: No



Additional Info:

Verzió: 7.0.0.0.alpha0+ (x64)
Build az.: a0e8a42a45abc7e626346bf01903ed81a026287d
CPU szálak: 8; OS: Windows 10.0 Build 17134; Felületmegjelenítés: alapértelmezett; VCL: win; 
Területi beállítások: hu-HU (hu_HU); Felület nyelve: hu-HU
Calc: CL
Comment 1 NISZ LibreOffice Team 2020-03-02 12:36:46 UTC
Created attachment 158310 [details]
Screenshot of the original document side by side in Word and Writer
Comment 2 Xisco Faulí 2020-03-02 12:51:05 UTC
Reproduced in

Version: 7.0.0.0.alpha0+
Build ID: 950e1aec0a984ce40a5038331f491272b51d41fa
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded

Version: 5.2.0.0.alpha1+
Build ID: 5b168b3fa568e48e795234dc5fa454bf24c9805e
CPU Threads: 4; OS Version: Linux 4.8; UI Render: default; 
Locale: ca-ES (ca_ES.UTF-8)

Version 4.1.0.0.alpha0+ (Build ID: efca6f15609322f62a35619619a6d5fe5c9bd5a)
Comment 3 Gabor Kelemen (Collabora) 2020-03-15 19:21:10 UTC
@Justin I thought this might interest you
Comment 4 Justin L 2020-03-16 11:06:36 UTC
proposed fix at https://gerrit.libreoffice.org/c/core/+/90558
Comment 5 Commit Notification 2020-03-17 15:52:32 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/0b5bf474d873fce11cc0f78d73f7e9656c95ffe8

tdf#131071 writerfilter: tableStyle uses DocDefaults

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.